# mam

./: .air.agent.toml  .air.center.toml  .editorconfig  .gitattributes  .gitignore  AGENTS.md  go.work  go.work.sum  one-link-start.ps1  package.json
.codex/: AGENTS.md  config.toml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/scripts/: tauri_cloud_scan_verify.py  tauri_missing_replica_indicator_verify.py  tauri_ui_smoke.py  tauri_upload_pause_resume_real.py
client/src/: App.dependencyServices.test.tsx  App.navigation-badges.test.tsx  App.runtimeStatus.test.tsx  App.test.tsx  App.tsx  WorkspaceTabs.test.tsx  data.ts  setupTests.ts  sqljs-browser.d.ts  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
docs/bug修复/: 统一文件管理系统-CD2远程上传只进缓存不进115的缺陷修复记录.md
docs/产品设计/: 统一文件管理系统-产品功能设计文档.md
docs/后端及核心服务/: 统一文件管理系统-后端及核心服务总体设计方案.md
docs/实现路径/: 统一文件管理系统-切片0三任务拆分方案.md  统一文件管理系统-切片11-CD2与aria2功能完善任务计划.md  统一文件管理系统-切片11页面收口真实客户端测试用例.md  统一文件管理系统-切片12-后台治理与巡检任务计划.md  统一文件管理系统-切片12真实客户端操作测试用例清单.md  统一文件管理系统-切片1三任务拆分方案.md  统一文件管理系统-垂直切片1任务拆分方案.md  统一文件管理系统-垂直切片实现路径.md  统一文件管理系统-网盘同步任务状态规划与任务拆分方案.md  统一文件管理系统-网盘同步任务真实客户端测试用例清单.md
docs/技术架构/: 统一文件管理系统-传输任务流程图与状态机设计.md  统一文件管理系统-技术架构设计文档.md  统一文件管理系统-标签管理整体方案.md
docs/数据库设计/: 统一文件管理系统-任务域数据库设计.md  统一文件管理系统-存储域数据库设计.md  统一文件管理系统-异常域数据库设计.md  统一文件管理系统-资产域数据库设计.md
docs/页面设计/: 统一文件管理系统-客户端任务中心传输任务子页面设计方案.md  统一文件管理系统-客户端任务中心其他任务子页面设计方案.md  统一文件管理系统-客户端存储节点页面设计方案.md  统一文件管理系统-客户端导入中心页面设计方案.md  (+5 more)
scripts/: check-utf8.mjs
(+230 files in other folders)
